<resources>
    <string name="app_name">خانه هوشمند پارمیس</string>

    <string name="navigation_drawer_open">بازکردن منوی کشویی</string>
    <string name="navigation_drawer_close">بستن منوی کشویی</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gettime">زمان</string>
    <string name="getaction">عمل</string>
    <string name="title_activity_addscript">تعریف سناریو</string>
    <string name="title_activity_sel_action_script">انتخاب برای سناریو</string>
    <string name="ssidupper">حساس به حروف کوچک و بزرگ</string>
    <string name="ssidname">نام شبکه</string>
    <string name="getssidname">لطفا نام شبکه خود را وارد کنید</string>
    <string name="ssidpass">کلمه عبور</string>
    <string name="ssidconnect">اتصال</string>
    <string name="getssidpass">کلمه عبور شبکه را وارد کنید</string>
    <string name="title_activity_addaction">اضافه کردن تجهیزات</string>
    <string name="title_activity_mobilejoin">اضافه کردن کاربر</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="rm_tv_switch">Switch</string>
    <string name="rm_tv_back">Back</string>
    <string name="rm_tv_9">\"1 2 3 4 5 6 7 8 9\"</string>
    <string name="rm_tv_vol">Volume</string>
    <string name="rm_tv_channel">Channel</string>
    <string name="rm_tv_menu">Menu</string>
    <string name="rm_tv_exit">Exit</string>
    <string name="rm_tv_more">More</string>
    <string name="rm_tv_ok">OK</string>
    <string name="cancel">Cancel</string>

</resources>
