<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.poujman.ya_mahdi.parmissmarthome.AddMiddleActivity">

    <TextView android:text="@string/ssidupper" android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         />
    <EditText
        android:id="@+id/txtssidname"
        android:hint="@string/ssidname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         />
    <TextView
        android:text="@string/ssidupper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
     />
    <EditText
        android:id="@+id/txtssidpass"

        android:hint="@string/ssidpass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         />
    <!--<EditText-->
        <!--android:id="@+id/txtssidip"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="آدرس (IP)در شبکه"/>-->
<Button
    android:id="@+id/btnconnect"
    android:text="@string/ssidconnect"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    style="@style/button_text" />
</LinearLayout>
